--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.13.2"
   }
 }
