--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "ZK",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongoose": "^8.13.2"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.13.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
